- Tree 수정    - treeId base64 암호화    - sendId unique 제거(MyTree의 경우엔 ""임으로 제거)    - 주인만 보기, 다같이보기인 shareType 추가    -